# sleepdart

./: .gitignore  .gitmodules  README.md  argparser.c  argparser.h  audio_sdl.c  audio_sdl.h  ay.c  ay.h  beeper.c  beeper.h  build.sh  dsp.c  dsp.h  file.c  file.h  input_sdl.c  input_sdl.h  io.c  io.h  log.c  log.h  machine.c  machine.h  main.c  memory.c  memory.h  meson.build  palette.c  palette.h  run_tests.sh  sleepdart_info.h  sound_sdl.c  sound_sdl.h  szx.c  szx.h  szx_blocks.h  szx_file.c  szx_file.h  szx_state.c  (+9 more)
.github/workflows/: build-test.yml
ayumi/: ayumi.c  ayumi.h
palettes/: default.raw  loni.raw  sleepdart.raw  spectaculator.raw  washed.raw
src/: argparser.c  argparser.h  audio_sdl.c  audio_sdl.h  ay.c  ay.h  beeper.c  beeper.h  config.c  config.h  config_parser.c  config_parser.h  debugger.c  debugger.h  disasm.c  disasm.h  dsp.c  dsp.h  file.c  file.h  hotkeys.c  hotkeys.h  input_sdl.c  input_sdl.h  io.c  io.h  keyboard.c  keyboard.h  keyboard_macro.c  keyboard_macro.h  log.c  log.h  machine.c  machine.h  machine_hooks.c  machine_hooks.h  machine_test.c  machine_test.h  main.c  memory.c  (+27 more)
src/win32/: gui_windows.c  gui_windows.h  resource.h  resource.rc
tests/: readme.md
tests/optional_zexdoc/: sleepdart-test.ini  zexdoc.szx
tests/z80doc/: docflags  macro.txt  print.txt  sleepdart-test.ini  z80doc.szx
tests/z80memptr/: print.txt  sleepdart-test.ini  z80memptr.szx
tests/zexdoc/: print.txt  zexdoc-info.txt
win32/: gui_windows.c  resource.h  resource.rc
